<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Course Recorder</string>
    <string name="trippreview" translatable="false">TripPreview</string>

    <string name="record_duration_default">Recording time: 0 minute</string>
    <string name="distance_traveled_default">Distance travelled: 0m</string>
    <string name="speed_default">Speed: 0 km/h</string>
    <string name="direction_default">Direction: N</string>
    <string name="altitude_default">Altitude: 0m</string>
    <string name="slope_default">Slope: 0%</string>

    <string name="record_duration">Recording time: <xliff:g id="time" example="0 minute">%1$s</xliff:g></string>
    <string name="distance_traveled">Distance travelled: <xliff:g id="distance" example="0m">%1$s</xliff:g></string>
    <string name="speed">Speed: <xliff:g id="speed" example="0">%.2f</xliff:g> km/h</string>
    <string name="direction">Direction: <xliff:g id="direction" example="N">%1$s</xliff:g></string>
    <string name="altitude">Altitude: <xliff:g id="altitude" example="0">%.2f</xliff:g>m</string>
    <string name="slope">Slope: <xliff:g id="slope" example="0%">%1$s</xliff:g></string>
    <string name="delete_record_success">Record deleted successfully!</string>
    <string name="trip_number">Trip #<xliff:g id="trip_number" example="1">%d</xliff:g></string>
    <string name="successfully_deleted">has been successfully deleted!</string>
    <string name="trip_recording">Your trip is being recorded.</string>
    <string name="duration">Duration:</string>
    <string name="distance">Distance:</string>
    <string name="speed_average">Average speed:</string>
    <string name="max_speed">Max speed:</string>
    <string name="internet_required">Internet connection required</string>
    <string name="internet_required_text">The internet connection is not enabled, some data cannot load.</string>
    <string name="cancel">Cancel</string>
    <string name="trip_number_contracted">Trip #<xliff:g id="trip_number" example="1">%d</xliff:g></string>
    <string name="break_text">Break:</string>
    <string name="beginning_text">Beginning:</string>
    <string name="ending_text">End:</string>
    <string name="starting">Start: <xliff:g id="unknown_position" example="Unknown position">%1$s</xliff:g>.</string>
    <string name="end">Arrival: <xliff:g id="unknown_position" example="Unknown position">%1$s</xliff:g>.</string>
    <string name="starting_default">Start: Unknown position.</string>
    <string name="end_default">Arrival: Unknown position.</string>
    <string name="beginning_default">• Beginning: <xliff:g id="unknown_start_date" example="21 august 2022 at 14h21">%1$s</xliff:g></string>
    <string name="ending_default">• End: <xliff:g id="unknown_end_date" example="22 august 2022 at 14h20">%1$s</xliff:g></string>
    <string name="default_duration">• Duration: <xliff:g id="duration_short" example="24h 59min 59s">%1$s</xliff:g></string>
    <string name="default_distance">• Distance: <xliff:g id="distance_short" example="0">%.2f</xliff:g> Km</string>
    <string name="default_speed">• Average speed: <xliff:g id="average_speed_short" example="99">%.2f</xliff:g> km/h</string>
    <string name="default_max_speed">• Max speed: <xliff:g id="max_speed_short" example="99">%.2f</xliff:g> km/h</string>
    <string name="default_break">• Break: <xliff:g id="break_duration" example="59 min">%1$s</xliff:g></string>
    <string name="delete_trip">Delete</string>
</resources>